# codemap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/codemap/: __init__.py  cli.py  rendering.py  version.py
src/codemap/ast_engine/: models.py  parser.py
src/codemap/callgraph/: __init__.py  builder.py  complexity.py  context.py  exporters.py  extractor.py  hotspots.py  models.py  resolver.py
src/codemap/core/: __init__.py  parser.py
src/codemap/graph/: __init__.py  builder.py  discovery.py  resolver.py
src/codemap/server/: __init__.py  app.py
tests/: test_ast_engine_imports.py  test_cli.py  test_cli_analyze.py  test_cli_callgraph.py  test_cli_scan.py  test_graph_builder.py  test_graph_discovery.py  test_graph_resolver.py  test_models.py  test_parse_file.py  test_parser_calls.py  test_parser_classes.py  test_parser_functions.py  test_parser_imports.py  test_rendering_graph.py
tests/callgraph/: test_builder.py  test_complexity.py  test_context.py  test_exporters.py  test_extractor.py  test_hotspots.py  test_integration.py  test_models.py  test_resolver.py
tests/fixtures/callgraph_sample/: config.py  utils.py
tests/fixtures/callgraph_sample/services/: processor.py
web/: package-lock.json  package.json  run_pup.mjs  test_render.mjs
web/public/: data.json
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/graph/: GraphViewer.tsx
web/src/components/panels/: GraphLegend.tsx  InspectorPanel.tsx  Sidebar.tsx
web/src/services/: ai.ts
web/src/types/: codemap.ts
web/src/utils/: colors.ts  graphMetrics.ts
